[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "onboarding-appliance"
version = "0.1.0"
description = "An automated tool for employee onboarding tasks, including account creation and data import."
authors = [
  { name="Cameron Cohen", email="cameron@example.com" },
]
license = "MIT"
requires-python = ">=3.8"
dependencies = [
    "requests",
    "msal",
    "selenium",
]

[project.urls]
"Homepage" = "https://github.com/cameron-cohen/onboarding-appliance"
"Bug Tracker" = "https://github.com/cameron-cohen/onboarding-appliance/issues"

[project.scripts]
onboard-app = "run:main"

[project.optional-dependencies]
dev = ["pyinstaller"]

[tool.setuptools]
py-modules = [
    "run",
    "gui",
    "onboarding",
    "integrations",
    "bw_import_converter",
]